feat: added pre-booking feature

--- a/css/common.css
+++ b/css/common.css
@@ -261,3 +261,20 @@ a, a:hover {
 #page-content-wrapper {
     padding: 0 15px;
 }
+
+.c-pointer {
+    cursor: pointer;
+}
+
+.col-calender {
+    flex: 0 0 14.285714%;
+    max-width: 14.2857143%;
+
+    position: relative;
+    width: 100%;
+    min-height: 1px;
+}
+
+.highligh-order-cell {
+    background-color: #efc6c6;
+}
